panama-src/genai/ffi/genai/ort_genai_c_h.java


    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * OgaResult *OgaGeneratorParamsTryGraphCaptureWithMaxBatchSize(OgaGeneratorParams *params, int32_t max_batch_size)
     * }
     */
    public static MethodHandle OgaGeneratorParamsTryGraphCaptureWithMaxBatchSize$handle() {
        return OgaGeneratorParamsTryGraphCaptureWithMaxBatchSize.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * OgaResult *OgaGeneratorParamsTryGraphCaptureWithMaxBatchSize(OgaGeneratorParams *params, int32_t max_batch_size)
     * }
     */
    public static MemorySegment OgaGeneratorParamsTryGraphCaptureWithMaxBatchSize$address() {
        return OgaGeneratorParamsTryGraphCaptureWithMaxBatchSize.ADDR;
    }

    /**
     * {@snippet lang=c :
     * OgaResult *OgaGeneratorParamsTryGraphCaptureWithMaxBatchSize(OgaGeneratorParams *params, int32_t max_batch_size)
     * }
     */
    public static MemorySegment OgaGeneratorParamsTryGraphCaptureWithMaxBatchSize(MemorySegment params, int max_batch_size) {
        var mh$ = OgaGeneratorParamsTryGraphCaptureWithMaxBatchSize.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaGeneratorParamsTryGraphCaptureWithMaxBatchSize", params, max_batch_size);
            }
            return (MemorySegment)mh$.invokeExact(params, max_batch_size);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaGeneratorParamsSetGuidance {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaGeneratorParamsSetGuidance");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * OgaResult *OgaGeneratorParamsSetGuidance(OgaGeneratorParams *params, const char *type, const char *data)
     * }
     */
    public static FunctionDescriptor OgaGeneratorParamsSetGuidance$descriptor() {
        return OgaGeneratorParamsSetGuidance.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * OgaResult *OgaGeneratorParamsSetGuidance(OgaGeneratorParams *params, const char *type, const char *data)
     * }
     */
    public static MethodHandle OgaGeneratorParamsSetGuidance$handle() {
        return OgaGeneratorParamsSetGuidance.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * OgaResult *OgaGeneratorParamsSetGuidance(OgaGeneratorParams *params, const char *type, const char *data)
     * }
     */
    public static MemorySegment OgaGeneratorParamsSetGuidance$address() {
        return OgaGeneratorParamsSetGuidance.ADDR;
    }

    /**
     * {@snippet lang=c :
     * OgaResult *OgaGeneratorParamsSetGuidance(OgaGeneratorParams *params, const char *type, const char *data)
     * }
     */
    public static MemorySegment OgaGeneratorParamsSetGuidance(MemorySegment params, MemorySegment type, MemorySegment data) {
        var mh$ = OgaGeneratorParamsSetGuidance.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaGeneratorParamsSetGuidance", params, type, data);
            }
            return (MemorySegment)mh$.invokeExact(params, type, data);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaCreateGenerator {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaCreateGenerator");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * OgaResult *OgaCreateGenerator(const OgaModel *model, const OgaGeneratorParams *params, OgaGenerator **out)
     * }
     */
    public static FunctionDescriptor OgaCreateGenerator$descriptor() {
        return OgaCreateGenerator.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * OgaResult *OgaCreateGenerator(const OgaModel *model, const OgaGeneratorParams *params, OgaGenerator **out)
     * }
     */
    public static MethodHandle OgaCreateGenerator$handle() {
        return OgaCreateGenerator.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * OgaResult *OgaCreateGenerator(const OgaModel *model, const OgaGeneratorParams *params, OgaGenerator **out)
     * }
     */
    public static MemorySegment OgaCreateGenerator$address() {
        return OgaCreateGenerator.ADDR;
    }

    /**
     * {@snippet lang=c :
     * OgaResult *OgaCreateGenerator(const OgaModel *model, const OgaGeneratorParams *params, OgaGenerator **out)
     * }
     */
    public static MemorySegment OgaCreateGenerator(MemorySegment model, MemorySegment params, MemorySegment out) {
        var mh$ = OgaCreateGenerator.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaCreateGenerator", model, params, out);
            }
            return (MemorySegment)mh$.invokeExact(model, params, out);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaDestroyGenerator {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ort_genai_c_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaDestroyGenerator");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void OgaDestroyGenerator(OgaGenerator *generator)
     * }
     */
    public static FunctionDescriptor OgaDestroyGenerator$descriptor() {
        return OgaDestroyGenerator.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void OgaDestroyGenerator(OgaGenerator *generator)
     * }
     */
    public static MethodHandle OgaDestroyGenerator$handle() {
        return OgaDestroyGenerator.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void OgaDestroyGenerator(OgaGenerator *generator)
     * }
     */
    public static MemorySegment OgaDestroyGenerator$address() {
        return OgaDestroyGenerator.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void OgaDestroyGenerator(OgaGenerator *generator)
     * }
     */
    public static void OgaDestroyGenerator(MemorySegment generator) {
        var mh$ = OgaDestroyGenerator.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaDestroyGenerator", generator);
            }
            mh$.invokeExact(generator);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaGenerator_IsDone {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ort_genai_c_h.C_BOOL,
            ort_genai_c_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaGenerator_IsDone");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * bool OgaGenerator_IsDone(const OgaGenerator *generator)
     * }
     */
    public static FunctionDescriptor OgaGenerator_IsDone$descriptor() {
        return OgaGenerator_IsDone.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * bool OgaGenerator_IsDone(const OgaGenerator *generator)
     * }
     */
    public static MethodHandle OgaGenerator_IsDone$handle() {
        return OgaGenerator_IsDone.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * bool OgaGenerator_IsDone(const OgaGenerator *generator)
     * }
     */
    public static MemorySegment OgaGenerator_IsDone$address() {
        return OgaGenerator_IsDone.ADDR;
    }

    /**
     * {@snippet lang=c :
     * bool OgaGenerator_IsDone(const OgaGenerator *generator)
     * }
     */
    public static boolean OgaGenerator_IsDone(MemorySegment generator) {
        var mh$ = OgaGenerator_IsDone.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaGenerator_IsDone", generator);
            }
            return (boolean)mh$.invokeExact(generator);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaGenerator_IsSessionTerminated {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ort_genai_c_h.C_BOOL,
            ort_genai_c_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaGenerator_IsSessionTerminated");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * bool OgaGenerator_IsSessionTerminated(const OgaGenerator *generator)
     * }
     */
    public static FunctionDescriptor OgaGenerator_IsSessionTerminated$descriptor() {
        return OgaGenerator_IsSessionTerminated.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * bool OgaGenerator_IsSessionTerminated(const OgaGenerator *generator)
     * }
     */
    public static MethodHandle OgaGenerator_IsSessionTerminated$handle() {
        return OgaGenerator_IsSessionTerminated.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * bool OgaGenerator_IsSessionTerminated(const OgaGenerator *generator)
     * }
     */
    public static MemorySegment OgaGenerator_IsSessionTerminated$address() {
        return OgaGenerator_IsSessionTerminated.ADDR;
    }

    /**
     * {@snippet lang=c :
     * bool OgaGenerator_IsSessionTerminated(const OgaGenerator *generator)
     * }
     */
    public static boolean OgaGenerator_IsSessionTerminated(MemorySegment generator) {
        var mh$ = OgaGenerator_IsSessionTerminated.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaGenerator_IsSessionTerminated", generator);
            }
            return (boolean)mh$.invokeExact(generator);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaGenerator_SetModelInput {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaGenerator_SetModelInput");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }
